--- a/api/package.json
+++ b/api/package.json
@@ -21,7 +21,8 @@
     "mqtt": "^4.3.7",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@types/express-session": "^1.17.7",
